added Base64 class.